@@ -1,6 +1,9 @@
 Revision history for Fatal
 
 1.10_05
+	* Rudimentary caching of generated code, to avoid having
+	  to regenerate the same code every single time Fatal/autodie
+	  is used on the same function.
 
 1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
 	* Made all $VERSION numbers more friendly to static code
